# Puzzled

./: .editorconfig  .gitignore  Cargo.toml  README.md  de.til7701.PuzzleADay.json  de.til7701.PuzzleMoreDays.json  de.til7701.Puzzled.Dev.json  de.til7701.Puzzled.json  meson.build
.github/workflows/: build-and-test.yaml  build.yaml  release-github.yaml  tagged-release.yaml
data/: de.til7701.PuzzleADay.desktop.in  de.til7701.PuzzleADay.gschema.xml  de.til7701.PuzzleADay.metainfo.xml.in  de.til7701.PuzzleADay.service.in  de.til7701.PuzzleMoreDays.metainfo.xml.in  de.til7701.Puzzled.desktop.in  de.til7701.Puzzled.gschema.xml  de.til7701.Puzzled.metainfo.xml.in  de.til7701.Puzzled.service.in  meson.build
data/icons/: meson.build
docs/: puzzle-collection-spec.md
po/: POTFILES.in  meson.build
puzzle_config/: Cargo.toml
puzzle_config/src/: error.rs  json.rs  lib.rs  random.rs  solution.rs  validation.rs
puzzle_config/src/config/: area.rs  board.rs  collection.rs  color.rs  difficulty.rs  mod.rs  preview.rs  progression.rs  puzzle.rs  target.rs  tile.rs
puzzle_config/src/json/: converter.rs  mod.rs  model.rs  predefined.rs
puzzle_config/src/random/: growing.rs  mod.rs  random_placement.rs
puzzle_solver/: Cargo.toml
puzzle_solver/src/: array_util.rs  banned.rs  bitmask.rs  board.rs  core.rs  lib.rs  plausibility.rs  result.rs  tile.rs
puzzle_solver/src/backtracking/: core.rs  mod.rs  positioned.rs
puzzle_solver/src/backtracking/pruner/: banned.rs  mod.rs
puzzled/: Cargo.toml
puzzled/resources/: meson.build  predefined.json  puzzled.gresource.xml
puzzled/resources/css/: style.css
puzzled/resources/puzzles/: chess.json  circles.json  hexominoes.json  pentominoes.json  puzzle_a_day.json  puzzled.json  recursive_construction.json  tetrominoes.json  trominoes.json
puzzled/resources/ui/: puzzle-collection-item.ui  puzzle-info-dialog.ui  solver-dialog.ui  window.ui
puzzled/resources/ui/dialog/: how-to-play-dialog.ui  mark-unsolved-dialog.ui  preferences-dialog.ui  shortcuts-dialog.ui  solved-dialog.ui
puzzled/resources/ui/page/: collection-selection-page.ui  puzzle-area-page.ui  puzzle-page.ui  puzzle-selection-page.ui  random-puzzle-page.ui
puzzled/resources/ui/widget/: puzzle-collection-item.ui  puzzle-mod.ui  puzzle-selection-item.ui  stars-view.ui
puzzled/src/: adw_ext.rs  application.rs  drawing.rs  main.rs  meson.build  offset.rs  window.rs
puzzled/src/app/: mod.rs
puzzled/src/app/collection_selection/: collection_selection.rs  collection_selection_item.rs  collection_selection_page.rs  load.rs  mod.rs
puzzled/src/app/components/: board.rs  solved_dialog.rs  tile.rs
puzzled/src/app/puzzle/: combinations.rs  extension.rs  hint.rs  info.rs  mod.rs  puzzle_page.rs  solved.rs
puzzled/src/app/puzzle/puzzle_area/: board.rs  highlight.rs  hint.rs  layout.rs  mod.rs  puzzle_area.rs  puzzle_state.rs  tile.rs
puzzled/src/app/puzzle_area/: combinations.rs  extension.rs  hint.rs  info.rs  mod.rs  puzzle_area_page.rs  puzzle_page.rs  solved.rs
puzzled/src/app/puzzle_area/puzzle/: extension.rs  hint.rs  mod.rs
puzzled/src/app/puzzle_area/puzzle_area/: board.rs  data.rs  highlight.rs  hint.rs  layout.rs  mod.rs  puzzle_area.rs  puzzle_state.rs  tile.rs
puzzled/src/app/puzzle_selection/: mod.rs  puzzle_mod.rs  puzzle_selection.rs  puzzle_selection_item.rs  puzzle_selection_page.rs
puzzled/src/app/random_puzzle/: mod.rs  random_puzzle_page.rs
puzzled/src/app/window/: main.rs
puzzled/src/components/: info_pill.rs  mod.rs  solved_dialog.rs  stars.rs  tile.rs
puzzled/src/global/: mod.rs  puzzle_meta.rs  runtime.rs  settings.rs  state.rs
puzzled/src/model/: collection.rs  extension.rs  mod.rs  puzzle.rs  puzzle_meta.rs  stars.rs
puzzled/src/model/placement/: board.rs  grid.rs  mod.rs  tile.rs
puzzled/src/model/store/: community.rs  mod.rs
puzzled/src/presenter/: collection_selection.rs  main.rs  mod.rs  navigation.rs  puzzle_selection.rs
puzzled/src/presenter/puzzle/: extension.rs  hint.rs  info.rs  mod.rs  solver.rs
puzzled/src/presenter/puzzle_area/: board.rs  data.rs  mod.rs  placement.rs  puzzle_state.rs  tile.rs
puzzled/src/puzzles/: community.rs  mod.rs  stars.rs
puzzled/src/solver/: combination_solutions.rs  mod.rs
puzzled/src/view/: board.rs  collection_selection_item.rs  collection_selection_page.rs  mod.rs  puzzle_area_page.rs  puzzle_mod.rs  puzzle_selection_page.rs  random_puzzle_page.rs  solved_dialog.rs  stars.rs  tile.rs
puzzled_common/: Cargo.toml
puzzled_common/src/: array_util.rs  lib.rs  shape.rs
puzzled_common/src/shape/: iterators.rs  mod.rs
puzzlemoredays/: Cargo.toml
puzzlemoredays/resources/: meson.build  puzzlemoredays.gresource.xml
puzzlemoredays/resources/css/: style.css
puzzlemoredays/resources/puzzles/: puzzle_a_day.json  puzzle_more_days.json  trominoes.json
puzzlemoredays/resources/ui/: puzzle-selection-item.ui  window.ui
puzzlemoredays/src/: application.rs  how-to-play-dialog.ui  main.rs  meson.build  puzzle-collection-item.ui  puzzle-selection-item.ui  puzzle_state.rs  puzzlemoredays.gresource.xml  state.rs  window.rs  window.ui
puzzlemoredays/src/global/: runtime.rs  state.rs
puzzlemoredays/src/presenter/: collection_selection.rs  main.rs  mod.rs  navigation.rs  puzzle_selection.rs
puzzlemoredays/src/presenter/puzzle/: extension.rs  info.rs  mod.rs  solver.rs
puzzlemoredays/src/presenter/puzzle_area/: board.rs  data.rs  mod.rs  puzzle_state.rs  tile.rs
puzzlemoredays/src/puzzle/: config.rs  mod.rs
puzzlemoredays/src/puzzles/: default.json  mod.rs
puzzlemoredays/src/solver/: mod.rs
puzzlemoredays/src/view/: board.rs  mod.rs
src/: application.rs  main.rs  meson.build  offset.rs  puzzle_state.rs  puzzleaday.gresource.xml  state.rs  style.css  view.rs  window.rs  window.ui
src/presenter/: board.rs  main.rs  mod.rs  puzzle_area.rs  tile.rs
src/puzzle/: bitmask.rs  config.rs  mod.rs  tile.rs  util.rs
src/solver/: mod.rs  tile.rs
