[workspace]
resolver = "3"
members = ["puzzle_solver", "puzzlemoredays"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
puzzle_solver = { path = "./puzzle_solver" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.10.3", package = "gtk4", features = ["gnome_49"] }
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_8"] }
ndarray = "0.17.2"
once_cell = "1.21.3"
log = "0.4.29"
simple_logger = "5.1.0"
time = "0.3.45"
humantime = "2.3.0"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.18"
