[workspace]
resolver = "3"
members = ["puzzle_solver", "puzzle_config", "puzzled", "puzzled_common"]

[workspace.package]
version = "1.2.0"
edition = "2024"

[workspace.dependencies]
puzzled_common = { path = "./puzzled_common" }
puzzle_solver = { path = "./puzzle_solver" }
puzzle_config = { path = "./puzzle_config" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.11.2", package = "gtk4", features = ["gnome_50"] }
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_9"] }
ndarray = "0.17.2"
once_cell = "1.21.4"
log = "0.4.29"
simple_logger = "5.2.0"
time = { version = "0.3.47", features = ["local-offset"] }
humantime = "2.3.0"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
semver = "1.0.28"
regex = "1.12.3"
rand = "0.10.1"
