[package]
name = "puzzle_config"
edition = "2024"
version.workspace = true

[dependencies]
ndarray = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["local-offset"] }
semver = { workspace = true }
regex = { workspace = true }
