[package]
name = "puzzle_config"
edition.workspace = true
version.workspace = true

[dependencies]
puzzled_common = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
semver = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
