[package]
name = "puzzle_solver"
edition = "2024"
version.workspace = true

[dependencies]
puzzled_common = { workspace = true }
ndarray = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }
