[package]
name = "puzzled"
edition = "2024"
version.workspace = true

[dependencies]
puzzle_solver = { workspace = true }
puzzle_config = { workspace = true }
gettext-rs = { workspace = true }
gtk = { workspace = true }
adw = { workspace = true }
ndarray = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
simple_logger = { workspace = true }
humantime = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
rand = { workspace = true }
