[package]
name = "puzzlemoredays"
edition = "2024"
version.workspace = true

[dependencies]
puzzle_solver = { workspace = true }
puzzle_config = { workspace = true }
gettext-rs = { workspace = true, features = ["gettext-system"] }
gtk = { workspace = true, package = "gtk4", features = ["gnome_47"] }
adw = { workspace = true, package = "libadwaita", features = ["v1_7"] }
ndarray = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
simple_logger = { workspace = true }
humantime = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
